<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="132dp"
    android:layout_height="120dp"
    android:layout_marginRight="8dp"
    android:clickable="true"
    android:elevation="5dp"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="8dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey1">

        <ImageView
            android:id="@+id/offer_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/level_up_resume"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/level_up_resume"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:text="@string/offer_text_stub"
            android:textColor="@color/white"
            android:textSize="@dimen/title4"
            app:layout_constraintBottom_toTopOf="@id/offer_action_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/offer_icon" />

        <TextView
            android:id="@+id/offer_action_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/offer_action_text_stub"
            android:textColor="@color/green"
            android:textSize="@dimen/title4"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/title_text"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>