<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".home.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_bg"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_rounded"
            android:backgroundTint="@color/grey2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/properties_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/search_field_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/title_search"
            android:src="@drawable/search_icon"
            app:layout_constraintBottom_toBottomOf="@id/view_bg"
            app:layout_constraintLeft_toLeftOf="@id/view_bg"
            app:layout_constraintTop_toTopOf="@id/view_bg" />

        <ImageView
            android:id="@+id/properties_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:contentDescription="@string/properties"
            android:src="@drawable/properties_icon"
            app:layout_constraintLeft_toRightOf="@id/view_bg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_bg" />

        <TextView
            android:id="@+id/search_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/search_hint"
            android:textColor="@color/grey4"
            app:layout_constraintBottom_toBottomOf="@id/view_bg"
            app:layout_constraintLeft_toRightOf="@id/search_field_icon"
            app:layout_constraintTop_toTopOf="@id/view_bg" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_offers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_bg"
            tools:itemCount="3"
            tools:listitem="@layout/list_offers_item_view" />

        <TextView
            android:id="@+id/vacancy_block_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/vacancy_block_text"
            android:textColor="@color/white"
            android:textSize="@dimen/title2"
            app:layout_constraintBottom_toTopOf="@id/rv_vacancies"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_offers" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_vacancies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintLeft_toLeftOf="@id/vacancy_block_text"
            app:layout_constraintTop_toBottomOf="@id/vacancy_block_text"
            tools:itemCount="3"
            tools:listitem="@layout/list_vacancies_item_view" />

        <Button
            android:id="@+id/more_vacancies_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/more_vacancies_button"
            android:text="@string/more_vacancies_stub"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/title3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/rv_vacancies"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_vacancies" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>